# mit-6824

mapreduce/: Cargo.toml  README.md  ex.json
mapreduce/src/: lib.rs  main.rs  master.rs  mrsequential.rs  rpc.rs  wc.rs  worker.rs
raft/: Cargo.toml  run.sh
raft/src/: main.rs  node.rs  noderpc.rs  rpcsender.rs
