[package]
name = "mapreduce"
version = "0.1.0"
authors = ["Raghav Kuppan <raghav.kuppan@gatech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-http-server = "14.2.0"
jsonrpc-core = "14.2.0"
jsonrpc-derive = "14.2.0"
jsonrpc-core-client = "14.2.0"
jsonrpc-client-http = "0.5.0"
jsonrpc-client-core = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"